It's really hard to override BUILDKITE_TAG

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -136,13 +136,14 @@ steps:
         workdir: /data/job
     timeout: 120
 
-  # - wait
+  - wait
 
   # MacOS Mojave
   - label: ":darwin: [Darwin] Mojave Tests"
     command: |
       cd eos
       buildkite-agent artifact download build.tar.gz . --step ":darwin: [Darwin] Mojave Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       - "queue=mac-anka-node-fleet"
@@ -183,6 +184,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":aws: Amazon Linux 2 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -226,6 +228,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":centos: CentOS 7 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -268,6 +271,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":ubuntu: Ubuntu 16.04 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -310,6 +314,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":ubuntu: Ubuntu 18.04 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
