--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -137,6 +137,7 @@ steps:
     timeout: 120
 
   - wait
+    skip: $SKIP_TESTS
 
   # MacOS Mojave
   - label: ":darwin: [Darwin] Mojave Tests"
@@ -158,7 +159,7 @@ steps:
         debug: true
         wait-network: true
     timeout: 120
-    skip: $SKIP_MOJAVE
+    skip: $SKIP_MOJAVE$SKIP_TESTS
 
   # - label: ":darwin: [Darwin] Mojave NP Tests"
   #   command:
@@ -201,6 +202,7 @@ steps:
         propagate-environment: true
         workdir: /data/job
     timeout: 60
+    skip: $SKIP_TESTS
 
   # - label: ":aws: Amazon Linux 2 NP Tests"
   #   command:
@@ -245,6 +247,7 @@ steps:
         propagate-environment: true
         workdir: /data/job
     timeout: 60
+    skip: $SKIP_TESTS
 
   # - label: ":centos: CentOS 7 NP Tests"
   #   command:
@@ -288,6 +291,7 @@ steps:
         propagate-environment: true
         workdir: /data/job
     timeout: 60
+    skip: $SKIP_TESTS
 
   # - label: ":ubuntu: Ubuntu 16.04 NP Tests"
   #   command:
@@ -331,6 +335,7 @@ steps:
         propagate-environment: true
         workdir: /data/job
     timeout: 60
+    skip: $SKIP_TESTS
 
   # - label: ":ubuntu: Ubuntu 18.04 NP Tests"
   #   command:
