--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -180,28 +180,28 @@ steps:
   #   skip: $SKIP_MOJAVE
 
   # Amazon Linux 2
-  - label: ":aws: Amazon Linux 2 Tests"
-    command: |
-      echo "--- :arrow_down: Downloading Build Directory"
-      buildkite-agent artifact download build.tar.gz . --step ":aws: Amazon Linux 2 Build"
-      export BUILDKITE_TAG='not-empty'
-      ./scripts/parallel-test.sh
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
-    skip: $SKIP_TESTS
+  # - label: ":aws: Amazon Linux 2 Tests"
+  #   command: |
+  #     echo "--- :arrow_down: Downloading Build Directory"
+  #     buildkite-agent artifact download build.tar.gz . --step ":aws: Amazon Linux 2 Build"
+  #     export BUILDKITE_TAG='not-empty'
+  #     ./scripts/parallel-test.sh
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
+  #   skip: $SKIP_TESTS
 
   # - label: ":aws: Amazon Linux 2 NP Tests"
   #   command:
