--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -149,6 +149,7 @@ steps:
       git clone ${BUILDKITE_PULL_REQUEST_REPO:-$BUILDKITE_REPO} .
       git checkout ${BUILDKITE_COMMIT}
       buildkite-agent artifact download build.tar.gz . --step ":darwin: [Darwin] Mojave Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       - "queue=mac-anka-node-fleet"
@@ -193,6 +194,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":aws: Amazon Linux 2 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -238,6 +240,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":centos: CentOS 7 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -282,6 +285,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":ubuntu: Ubuntu 16.04 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
@@ -326,6 +330,7 @@ steps:
     command: |
       echo "--- :arrow_down: Downloading Build Directory"
       buildkite-agent artifact download build.tar.gz . --step ":ubuntu: Ubuntu 18.04 Build"
+      export BUILDKITE_TAG='not-empty'
       ./scripts/parallel-test.sh
     agents:
       queue: "automation-large-builder-fleet"
