fix ABI and tester compatibility with variant differences

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -49,6 +49,7 @@ add_library( eosio_chain
              protocol_state_object.cpp
              protocol_feature_activation.cpp
              protocol_feature_manager.cpp
+             producer_schedule.cpp
              genesis_intrinsics.cpp
              whitelisted_intrinsics.cpp
              thread_utils.cpp
