support for multiple signatures on blocks via block level extension

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library( eosio_chain
              merkle.cpp
              name.cpp
              transaction.cpp
+             block.cpp
              block_header.cpp
              block_header_state.cpp
              block_state.cpp
