Handle difference between MacOS and Ubuntu for hidapi

--- a/libraries/microfido/CMakeLists.txt
+++ b/libraries/microfido/CMakeLists.txt
@@ -1,5 +1,9 @@
 find_package(PkgConfig REQUIRED)
+if (APPLE)
 pkg_search_module(HIDAPI REQUIRED IMPORTED_TARGET hidapi)
+elseif (UNIX AND NOT APPLE)
+pkg_search_module(HIDAPI REQUIRED IMPORTED_TARGET hidapi-libusb)
+endif()
 add_subdirectory(tinycbor)
 
 add_library(microfido microfido.cpp)
