--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -34,8 +34,10 @@ find_package(LLVM 4.0 REQUIRED CONFIG)
 link_directories(${LLVM_LIBRARY_DIR})
 
 add_subdirectory(contracts)
-
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/contracts.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/include/contracts.hpp ESCAPE_QUOTES)
+
+add_subdirectory(snapshots)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/snapshots.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/include/snapshots.hpp ESCAPE_QUOTES)
 
 ### BUILD UNIT TEST EXECUTABLE ###
 file(GLOB UNIT_TESTS "*.cpp") # find all unit test suites
