add accurate checktime timer for macOS
Add a kevent based timer for accurate checktime timer on macOS. Also, refactor the code such that the appropriate platform specific timer code is used. On platforms without an implementation fall back to poll mode. Also, refactor how the time accuracy is verified ("calibrated") so that it is not a copy paste job and can use the checktime_timer object itself.

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -5,6 +5,17 @@ file(GLOB HEADERS "include/eosio/chain/*.hpp"
                   "include/eosio/chain/webassembly/*.hpp"
                   "${CMAKE_CURRENT_BINARY_DIR}/include/eosio/chain/core_symbol.hpp" )
 
+if(APPLE AND UNIX)
+   set(CHECKTIME_TIMER_IMPL checktime_timer_macos.cpp)
+else()
+   try_run(POSIX_TIMER_TEST_RUN_RESULT POSIX_TIMER_TEST_COMPILE_RESULT ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/checktime_timer_posix_test.c)
+   if(POSIX_TIMER_TEST_RUN_RESULT EQUAL 0)
+      set(CHECKTIME_TIMER_IMPL checktime_timer_posix.cpp)
+   else()
+      set(CHECKTIME_TIMER_IMPL checktime_timer_dummy.cpp)
+   endif()
+endif()
+
 ## SORT .cpp by most likely to change / break compile
 add_library( eosio_chain
              merkle.cpp
@@ -52,6 +63,8 @@ add_library( eosio_chain
              genesis_intrinsics.cpp
              whitelisted_intrinsics.cpp
              thread_utils.cpp
+             checktime_timer_calibrate.cpp
+             ${CHECKTIME_TIMER_IMPL}
              ${HEADERS}
              )
 
