copy scripts dir from bats-v3 + tests/bash-bats tests + pipeline.jsonc for test pipeline + CMakeLists.txt change to support versioned location

--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -1,4 +1,14 @@
 {
+    "eosio": {
+        "pipeline-branch": "bats-v3",
+        "environment": {
+            "IMAGE_TAG": "bats-v3",
+            "DEBUG": true
+        }
+    },
+    "eosio-base-images": {
+        "pipeline-branch": "bats-v3"
+    },
     "eosio-build-unpinned":
     {
         "pipeline-branch": "protocol-features-sync-nodes"
