--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -2,7 +2,7 @@
     "eosio": {
         "pipeline-branch": "bats-v3",
         "environment": {
-            "IMAGE_TAG": "bats-v3",
+            "IMAGE_TAG": "1.8.0-rc2",
             "DEBUG": true
         }
     },
